tests/snapshots/test_examples__fail__basic.fly.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: assertion failure
   ┌─ examples/fail/basic.fly:12:1
   │
12 │ assert p(t0)
   │ ^^^^^^^^^^^^
   │
   = counter example:
     universe thread: thread!val!0
     p = (lambda (x!0) false)
     q = false
     t0 = thread!val!0


